Fix notification button visibility toggling animation;

--- a/forum/qa-theme/SnowFlat/qa-styles.css
+++ b/forum/qa-theme/SnowFlat/qa-styles.css
@@ -5292,10 +5292,11 @@ padding: 10px;
 	display: block;
 	width: 175px;
 	height: 0;
-	margin: 5px auto;
+	margin: 0 auto;
+	padding: 0;
 	opacity: 0;
 	background: #1abc9c;
-	border-color: transparent;
+	border: none;
 	border-radius: 15px;
 	font-size: 16px;
 	color: white;
@@ -5311,9 +5312,10 @@ padding: 10px;
 }
 
 .qa-custom-new-content-notifier--visible {
+	margin: 5px auto;
 	height: 30px;
 	opacity: 1;
-	transition: height 0.125s, opacity 0.125s 0.125s ease-out;
+	transition: height 0.125s, opacity 0.125s ease-out;
 
 	--scale-predefined-value: 1.1;
 }
